feat: WIP prompts-templates
