# docs/prompts/api.yaml
@@ -26,7 +26,7 @@ paths:
                         application/json:
                             schema:
                                 type: object
-                                $ref: '#/components/schemas/IResponse'
+                                $ref: '#/components/schemas/IResponseBadRequest'
 
         put:
             summary: Update a Prompt.
@@ -46,7 +46,7 @@ paths:
                         application/json:
                             schema:
                                 type: object
-                                $ref: '#/components/schemas/IResponse'
+                                $ref: '#/components/schemas/IResponseBadRequest'
 
         delete:
             summary: Delete a prompt.
@@ -78,7 +78,7 @@ paths:
                         application/json:
                             schema:
                                 type: object
-                                $ref: '#/components/schemas/IResponse'
+                                $ref: '#/components/schemas/IResponseBadRequest'
 
     /prompts/templates:
         post:
@@ -91,12 +91,17 @@ paths:
                     application/json:
                         schema:
                             allOf:
-                                - $ref: '#/components/schemas/IPromptDataParams'
+                                - $ref: '#/components/schemas/IPromptTemplateDataParams'
                                 - type: object
                             required:
                                 - name
                                 - description
                                 - language
+                            properties:
+                                categories:
+                                    type: array
+                                    items:
+                                        type: string
 
             responses:
                 200:
@@ -112,10 +117,11 @@ paths:
                         application/json:
                             schema:
                                 type: object
-                                $ref: '#/components/schemas/IResponse'
+                                $ref: '#/components/schemas/IResponseBadRequest'
 
+    /prompts/templates/project/{id}:
         get:
-            summary: Get a prompt templates list.
+            summary: Get a prompts templates by project.
             tags:
                 - Prompts Templates
             parameters:
@@ -135,47 +141,14 @@ paths:
                         application/json:
                             schema:
                                 type: object
-                                $ref: '#/components/schemas/IResponse'
+                                $ref: '#/components/schemas/IResponseList'
                 400:
                     description: Bad request. Possible errors regarding missing or incorrect data.
                     content:
                         application/json:
                             schema:
                                 type: object
-                                $ref: '#/components/schemas/IResponse'
-
-    /prompts/migrate:
-        post:
-            summary: Update prompts from one environment to another.
-            tags:
-                - Prompts Templates
-            requestBody:
-                required: true
-                content:
-                    application/json:
-                        schema:
-                            type: object
-                            required:
-                                - value
-                            properties:
-                                value:
-                                    type: string
-
-            responses:
-                200:
-                    description: Prompt published successfully.
-                    content:
-                        application/json:
-                            schema:
-                                type: object
-                                $ref: '#/components/schemas/IResponse'
-                400:
-                    description: Bad request. Possible errors regarding missing or incorrect data.
-                    content:
-                        application/json:
-                            schema:
-                                type: object
-                                $ref: '#/components/schemas/IResponse'
+                                $ref: '#/components/schemas/IResponseBadRequest'
 
 components:
     schemas:
@@ -187,17 +160,41 @@ components:
                 status:
                     type: boolean
                     description: Response status.
+                data:
+                    type: object
+                    $ref: '#/components/schemas/IPromptTemplateData'
+                    description: Response Data.
+
+        IResponseBadRequest:
+            type: object
+            properties:
+                status:
+                    type: boolean
+                    description: Response status.
                 error:
                     type: string
                     description: Error text.
+
+        IResponseList:
+            type: object
+            required:
+                - status
+            properties:
+                status:
+                    type: boolean
+                    description: Response status.
                 data:
                     type: object
-                    $ref: '#/components/schemas/IPromptData'
-                    description: Response Data.
+                    properties:
+                        entries:
+                            description: Response Data.
+                            type: array
+                            items:
+                                $ref: '#/components/schemas/IPromptTemplateData'
 
-        IPromptDataParams:
+        IPromptTemplateDataParams:
             allOf:
-                - $ref: '#/components/schemas/IPromptDataBase'
+                - $ref: '#/components/schemas/IPromptTemplateBaseData'
                 - type: object
             type: object
             required:
@@ -207,28 +204,33 @@ components:
                 - format
                 - is
 
-        IPromptData:
+        IPromptTemplateBaseData:
             allOf:
-                - $ref: '#/components/schemas/IPromptDataBase'
+                - $ref: '#/components/schemas/IPromptTemplateData'
                 - type: object
             type: object
             properties:
-                categories?:
+                options:
                     type: array
                     items:
-                        $ref: '#/components/schemas/IPromptCategoryData'
-                options?:
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/IPromptOptionData'
-                dependencies?:
+                        $ref: '#/components/schemas/IPromptTemplateOptionData'
+                dependencies:
                     type: array
                     items:
                         type: string
 
-        IPromptDataBase:
+        IPromptTemplateData:
             type: object
+            required:
+                - id
+                - name
+                - description
+                - language
+                - format
+                - is
             properties:
+                id:
+                    type: string
                 name:
                     type: string
                 description:
@@ -247,10 +249,28 @@ components:
                         - function
                         - dependency
                 value:
+                    type: string
+                options:
                     type: array
                     items:
-                        type: string
-        IPromptCategoryData:
+                        $ref: '#/components/schemas/IPromptTemplateOptionData'
+                literals:
+                    type: object
+                    properties:
+                        pure:
+                            type: array
+                            items:
+                                type: string
+                        dependencies:
+                            type: array
+                            items:
+                                type: string
+                        metadata:
+                            type: array
+                            items:
+                                type: string
+
+        IPromptTemplateCategoryData:
             properties:
                 id:
                     type: string
@@ -263,7 +283,7 @@ components:
                     additionalProperties:
                         type: string
 
-        IPromptOptionData:
+        IPromptTemplateOptionData:
             properties:
                 id:
                     type: string
